stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_duplicate_list_pattern_binding.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/duplicate_list_pattern_binding.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × duplicate pattern binding
   ╭─[tests/fixtures/diagnostics/types/duplicate_list_pattern_binding.ml:4:13]
 3 │   dbg(match items {
 4 │     [value, value] -> value,
   ·             ──┬──
   ·               ╰── `value` is already bound by this pattern
 5 │     _ -> 0
   ╰────
  help: use a unique name for each binding in the pattern
